# first_mcp

./: 2mcp_api_server2.py  README.md  client_query.py  fineTune.py  infer_mcp.py  llm.py  mcp_api_server.py  mcp_execute_pipeline.py  mcp_pokemon.jsonl  model_server.py  model_token_per_sec.py  pokemon.py  preprocessor.py  pyproject.toml  run_mcp_query.py  save_model.py  test.py
mcp-mistral-lora/: README.md  adapter_config.json
mcp-mistral-lora/checkpoint-75/: rng_state.pth  scaler.pt  scheduler.pt  tokenizer_config.json  trainer_state.json
