[project]
name = "mcp-weather-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "flask>=3.1.0",
    "mcp[cli]>=1.6.0",
    "openai>=1.74.0",
    "peft>=0.15.2",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "websocket-client>=1.8.0",
]
